Update git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,8 @@
+[core]
+  fileMod = false
 [user]
 	name = Michael Malura
-	email = maluramichael@googlemail.com
-[difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
-[mergetool "sourcetree"]
-	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
+	email = github@malura.me
 [push]
 	default = simple
 [github]
