--- a/_dotfiles/.tmux.conf
+++ b/_dotfiles/.tmux.conf
@@ -68,7 +68,7 @@ setw -g mode-style 'fg=colour1 bg=colour18 bold'
 # # statusbar
 set -g status-interval 1
 set -g status-bg "#000000"
-set -g status-position bottom
+set -g status-position top
 set -g status-justify left
 set -g status-left-length 100
 set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour235,bg=colour121] #(whoami) #[default] '
