Enhance tmux configuration with modern settings, improved key bindings, and updated appearance options. Added plugin support and optimized window management features.

--- a/_dotfiles/.tmux.conf
+++ b/_dotfiles/.tmux.conf
@@ -1,16 +1,65 @@
-# # Many of the following settings are from Ham Vocke. Thank you mate -> https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+# Many of the following settings are from Ham Vocke. Thank you mate -> https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 
-# unbind C-b
-# set-option -g prefix C-a
-# bind-key C-a send-prefix
+# ==============================================================================
+# GENERAL SETTINGS
+# ==============================================================================
 
-# remap " % to [ ]
+# Modern terminal settings
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+set -ag terminal-overrides ",alacritty:RGB"
+
+# Faster escape time (important for vim/neovim)
+set -sg escape-time 0
+
+# Increase scrollback buffer
+set -g history-limit 50000
+
+# Enable focus events (for vim/neovim autoread)
+set -g focus-events on
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Renumber windows when one is closed
+set -g renumber-windows on
+
+# Automatically rename windows based on current program
+setw -g automatic-rename on
+
+# Display messages for longer
+set-option -g display-time 4000
+set-option -g display-panes-time 3000
+
+# Update status bar more frequently
+set -g status-interval 1
+
+# Enable mouse support (can be toggled)
+set -g mouse on
+
+# Quiet mode - no bells or visual notifications
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+# ==============================================================================
+# KEY BINDINGS - SPLITS AND WINDOWS
+# ==============================================================================
+
+# Remap " % to [ ] for splits (keeping current path)
 bind -n M-[ split-window -v -c "#{pane_current_path}"
 bind -n M-] split-window -h -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-# # remap window selection
+# Full-width/height splits
+bind -n M-S-[ split-window -fv -c "#{pane_current_path}"
+bind -n M-S-] split-window -fh -c "#{pane_current_path}"
+
+# Window selection with Alt+number
 bind -n M-0 select-window -t 0
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
@@ -21,74 +70,218 @@ bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
+
+# Window navigation
 bind -n M-n select-window -n
 bind -n M-p select-window -p
-bind -n M-c new-window
+bind -n M-c new-window -c "#{pane_current_path}"
+bind -n M-w kill-window
+bind -n M-Tab last-window
 
-# # zoom
+# Swap windows left/right
+bind -n M-< swap-window -t -1\; select-window -t -1
+bind -n M-> swap-window -t +1\; select-window -t +1
+
+# ==============================================================================
+# KEY BINDINGS - PANE MANAGEMENT
+# ==============================================================================
+
+# Zoom toggle
 bind -n M-z resize-pane -Z
 
-# # reload config file (change file location to your the tmux.conf you want to use)
-bind -n M-r source-file ~/.tmux.conf
-
-# # switch panes using Alt-arrow without prefix
+# Switch panes using Alt-arrow
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
-bind -n C-Left resize-pane -L 1
-bind -n C-Right resize-pane -R 1
-bind -n C-Up resize-pane -U 1
-bind -n C-Down resize-pane -D 1
-bind -n C-M-Left resize-pane -L 10
-bind -n C-M-Right resize-pane -R 10
-bind -n C-M-Up resize-pane -U 10
-bind -n C-M-Down resize-pane -D 10
 
-# # Disable mouse control (clickable windows, panes, resizable panes)
-set -g mouse off
+# Switch panes using Alt-hjkl (vim-style)
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
-# # loud or quiet?
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
+# Resize panes with Shift+Alt+arrow
+bind -n M-S-Left resize-pane -L 5
+bind -n M-S-Right resize-pane -R 5
+bind -n M-S-Up resize-pane -U 5
+bind -n M-S-Down resize-pane -D 5
 
-# # modes
-setw -g clock-mode-colour colour5
-setw -g mode-style 'fg=colour1 bg=colour18 bold'
+# Resize panes with Shift+Alt+hjkl
+bind -n M-H resize-pane -L 5
+bind -n M-L resize-pane -R 5
+bind -n M-K resize-pane -U 5
+bind -n M-J resize-pane -D 5
 
-# # panes
-# set -g pane-border-fg "#000000"
-# set -g pane-border-bg "#ffffff"
-# set -g pane-active-border-fg "#000000"
-# set -g pane-active-border-bg "#2D2A2E"
+# Swap panes
+bind -n 'M-{' swap-pane -U
+bind -n 'M-}' swap-pane -D
 
-# # statusbar
-set -g status-interval 1
-set -g status-bg "#000000"
+# Kill pane without confirmation
+bind -n M-x kill-pane
+
+# Break pane into new window
+bind -n M-! break-pane
+
+# Join pane from another window (interactive)
+bind @ choose-window 'join-pane -h -s "%%"'
+
+# Rotate panes
+bind -n M-o rotate-window
+
+# ==============================================================================
+# KEY BINDINGS - LAYOUTS
+# ==============================================================================
+
+# Quick layout switching
+bind -n M-Enter next-layout
+
+# Specific layouts with prefix
+bind = select-layout even-horizontal
+bind | select-layout even-vertical
+bind _ select-layout main-horizontal
+bind \\ select-layout main-vertical
+bind + select-layout tiled
+
+# ==============================================================================
+# KEY BINDINGS - SESSIONS
+# ==============================================================================
+
+# Session management
+bind -n M-s choose-tree -Zs
+bind -n M-S new-session
+bind -n M-d detach-client
+bind -n M-$ command-prompt -I "#S" "rename-session '%%'"
+
+# Quick switch to last session
+bind -n M-\\ switch-client -l
+
+# ==============================================================================
+# KEY BINDINGS - COPY MODE
+# ==============================================================================
+
+# Vi-style copy mode
+setw -g mode-keys vi
+
+# Enter copy mode
+bind -n M-v copy-mode
+bind -n M-/ copy-mode \; send-keys /
+
+# Copy mode bindings
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi r send-keys -X rectangle-toggle
+bind -T copy-mode-vi Escape send-keys -X cancel
+
+# Paste from tmux buffer
+bind -n M-P paste-buffer
+
+# Mouse selection copies to clipboard
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# ==============================================================================
+# KEY BINDINGS - UTILITY
+# ==============================================================================
+
+# Reload config
+bind -n M-r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+
+# Toggle mouse on/off
+bind m set -g mouse \; display-message "Mouse: #{?mouse,ON,OFF}"
+
+# Synchronize panes (send same input to all panes)
+bind -n M-y setw synchronize-panes \; display-message "Sync: #{?synchronize-panes,ON,OFF}"
+
+# Clear screen and scrollback
+bind -n M-C send-keys C-l \; run 'sleep 0.1' \; clear-history
+
+# Open command prompt
+bind -n M-: command-prompt
+
+# List all keybindings
+bind ? list-keys
+
+# Capture pane content to file
+bind P capture-pane -S -50000 \; save-buffer ~/tmux-capture.txt \; display-message "Pane captured to ~/tmux-capture.txt"
+
+# ==============================================================================
+# APPEARANCE - STATUS BAR
+# ==============================================================================
+
 set -g status-position top
 set -g status-justify left
+set -g status-style 'bg=#1a1b26 fg=#a9b1d6'
+
+# Left side: session and user
 set -g status-left-length 100
-set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour235,bg=colour121] #(whoami) #[default] '
-set -g status-right '#[fg=colour232,bg=colour154] %d/%m %H:%M:%S '
-# set -g status-right ''
-set-option -g display-time 4000
+set -g status-left '#[fg=#1a1b26,bg=#7aa2f7,bold] #S #[fg=#1a1b26,bg=#9ece6a] #(whoami) #[fg=#9ece6a,bg=#1a1b26] '
 
-# # windows
-set -g window-status-format "#[fg=#cccccc][#I #W#{?window_zoomed_flag,*Z,}]"
-set -g window-status-current-format "#[fg=white,bold][#[underscore]#I #W#{?window_zoomed_flag,*Z,}#[default,fg=white,bold]]"
-# set-window-option -g window-status-fg colour249
-# set-window-option -g window-status-activity-attr none
-# set-window-option -g window-status-bell-attr none
-# set-window-option -g window-status-activity-fg yellow
-# set-window-option -g window-status-bell-fg red
-# set -g window-style 'fg=#cccccc,bg=#333333'
-# set -g window-active-style 'fg=white,bg=#333333'
+# Right side: pane info, date, time
+set -g status-right-length 100
+set -g status-right '#[fg=#565f89]#{?client_prefix,#[fg=#f7768e]PREFIX ,}#{?synchronize-panes,#[fg=#bb9af7]SYNC ,}#[fg=#7aa2f7]#I:#P #[fg=#565f89]| #[fg=#9ece6a]%Y-%m-%d #[fg=#565f89]| #[fg=#7aa2f7]%H:%M:%S '
+
+# ==============================================================================
+# APPEARANCE - WINDOWS
+# ==============================================================================
+
+set -g window-status-format '#[fg=#565f89] #I:#W#{?window_zoomed_flag,*Z,}#{?window_activity_flag,!,} '
+set -g window-status-current-format '#[fg=#1a1b26,bg=#7aa2f7,bold] #I:#W#{?window_zoomed_flag,*Z,} '
+set -g window-status-separator ''
+set -g window-status-activity-style 'fg=#f7768e'
+
+# ==============================================================================
+# APPEARANCE - PANES
+# ==============================================================================
+
+set -g pane-border-style 'fg=#3b4261'
+set -g pane-active-border-style 'fg=#7aa2f7'
+
+# Pane number display
+set -g display-panes-colour '#565f89'
+set -g display-panes-active-colour '#7aa2f7'
+
+# ==============================================================================
+# APPEARANCE - MESSAGES AND MODES
+# ==============================================================================
+
+set -g message-style 'fg=#1a1b26 bg=#7aa2f7 bold'
+set -g message-command-style 'fg=#1a1b26 bg=#bb9af7 bold'
+
+setw -g clock-mode-colour '#7aa2f7'
+setw -g mode-style 'fg=#1a1b26 bg=#bb9af7 bold'
+
+# ==============================================================================
+# WINDOW TITLES
+# ==============================================================================
+
 set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
+set-option -g set-titles-string '#H - #S - #W'
 
-# # plugins
-# set -g @plugin 'kechol/tmux-git-status'
-# run -b '~/.tmux/plugins/tpm/tpm'
+# ==============================================================================
+# PLUGINS
+# ==============================================================================
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'b0o/tmux-autoreload'
+set -g @plugin 'jaclu/tmux-menus'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
+set -g @plugin 'rickstaa/tmux-notify'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'sainnhe/tmux-fzf'
+
+# Plugin settings
+set -g @sidebar-tree-width '100'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '10'
+
+# tmux-fzf settings
+TMUX_FZF_LAUNCH_KEY="f"
+
+# Initialize TPM (keep at bottom)
+run -b '~/.tmux/plugins/tpm/tpm'
