--- a/_dotfiles/.tmux.conf
+++ b/_dotfiles/.tmux.conf
@@ -77,6 +77,7 @@ bind -n M-p select-window -p
 bind -n M-c new-window -c "#{pane_current_path}"
 bind -n M-w kill-window
 bind -n M-Tab last-window
+bind -n M-, command-prompt -I "#W" "rename-window '%%'"
 
 # Swap windows left/right
 bind -n M-< swap-window -t -1\; select-window -t -1
@@ -216,9 +217,9 @@ set -g status-style 'bg=#1a1b26 fg=#a9b1d6'
 set -g status-left-length 100
 set -g status-left '#[fg=#1a1b26,bg=#7aa2f7,bold] #S #[fg=#1a1b26,bg=#9ece6a] #(whoami) #[fg=#9ece6a,bg=#1a1b26] '
 
-# Right side: pane info, date, time
-set -g status-right-length 100
-set -g status-right '#[fg=#565f89]#{?client_prefix,#[fg=#f7768e]PREFIX ,}#{?synchronize-panes,#[fg=#bb9af7]SYNC ,}#[fg=#7aa2f7]#I:#P #[fg=#565f89]| #[fg=#9ece6a]%Y-%m-%d #[fg=#565f89]| #[fg=#7aa2f7]%H:%M:%S '
+# Right side: git, pane info, date, time
+set -g status-right-length 150
+set -g status-right '#[fg=#565f89]#{?client_prefix,#[fg=#f7768e]PREFIX ,}#{?synchronize-panes,#[fg=#bb9af7]SYNC ,}#(gitmux -cfg ~/.gitmux.conf "#{pane_current_path}") #[fg=#7aa2f7]#I:#P #[fg=#565f89]| #[fg=#9ece6a]%Y-%m-%d #[fg=#565f89]| #[fg=#7aa2f7]%H:%M:%S '
 
 # ==============================================================================
 # APPEARANCE - WINDOWS
@@ -273,15 +274,45 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'sainnhe/tmux-fzf'
 
-# Plugin settings
+# New plugins
+set -g @plugin 'alexwforsythe/tmux-which-key'      # Keybinding cheatsheet popup
+set -g @plugin 'laktak/extrakto'                   # fzf copy from scrollback
+set -g @plugin 'fcsonline/tmux-thumbs'             # Quick copy with hints
+set -g @plugin 'christoomey/vim-tmux-navigator'    # Seamless vim/tmux navigation
+set -g @plugin 'wfxr/tmux-fzf-url'                 # Quick URL opener
+set -g @plugin 'arl/gitmux'                        # Git status in status bar
+
+# ==============================================================================
+# PLUGIN SETTINGS
+# ==============================================================================
+
+# Sidebar
 set -g @sidebar-tree-width '100'
+
+# Session persistence
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '10'
 
-# tmux-fzf settings
+# tmux-fzf
 TMUX_FZF_LAUNCH_KEY="f"
+
+# tmux-thumbs (quick copy)
+set -g @thumbs-key F
+set -g @thumbs-unique enabled
+set -g @thumbs-command 'echo -n {} | pbcopy'
+
+# extrakto (fzf copy from scrollback)
+set -g @extrakto_key 'e'
+set -g @extrakto_copy_key 'tab'
+set -g @extrakto_insert_key 'enter'
+
+# tmux-fzf-url
+set -g @fzf-url-bind 'u'
+
+# vim-tmux-navigator (Ctrl+hjkl to move between vim/tmux)
+# Note: Also install the vim plugin for full integration
 
 # Initialize TPM (keep at bottom)
 run -b '~/.tmux/plugins/tpm/tpm'
