Enhance tmux configuration with new status bar elements and improved system monitoring features. Added scripts for battery, CPU, memory, disk usage, network activity, and uptime. Updated status bar formatting for better visibility and real-time updates.

--- a/_dotfiles/.tmux.conf
+++ b/_dotfiles/.tmux.conf
@@ -32,9 +32,6 @@ setw -g automatic-rename on
 set-option -g display-time 4000
 set-option -g display-panes-time 3000
 
-# Update status bar more frequently
-set -g status-interval 1
-
 # Enable mouse support (can be toggled)
 set -g mouse on
 
@@ -213,22 +210,34 @@ set -g status-position top
 set -g status-justify left
 set -g status-style 'bg=#1a1b26 fg=#a9b1d6'
 
-# Left side: session and user
-set -g status-left-length 100
-set -g status-left '#[fg=#1a1b26,bg=#7aa2f7,bold] #S #[fg=#1a1b26,bg=#9ece6a] #(whoami) #[fg=#9ece6a,bg=#1a1b26] '
+# Update status bar more frequently (for real-time system monitoring)
+set -g status-interval 2
 
-# Right side: git, pane info, date, time
-set -g status-right-length 150
-set -g status-right '#[fg=#565f89]#{?client_prefix,#[fg=#f7768e]PREFIX ,}#{?synchronize-panes,#[fg=#bb9af7]SYNC ,}#(gitmux -cfg ~/.gitmux.conf "#{pane_current_path}") #[fg=#7aa2f7]#I:#P #[fg=#565f89]| #[fg=#9ece6a]%Y-%m-%d #[fg=#565f89]| #[fg=#7aa2f7]%H:%M:%S '
+# Left side: session, user, window/pane count
+set -g status-left-length 120
+set -g status-left '#[fg=#1a1b26,bg=#7aa2f7,bold] #S #[fg=#1a1b26,bg=#9ece6a] #(whoami) #[fg=#9ece6a,bg=#1a1b26] #[fg=#565f89]│ #(if [ -f ~/.scripts/tmux/status_elements.py ]; then ~/.scripts/tmux/status_elements.py window_count; fi) #[fg=#565f89]│ '
+
+# Right side: system info, git, pane info, date, time
+set -g status-right-length 280
+set -g status-right '#[fg=#565f89]│ #{?client_prefix,#[fg=#f7768e]PREFIX #[fg=#565f89]│ ,}#{?synchronize-panes,#[fg=#bb9af7]SYNC #[fg=#565f89]│ ,}#(if [ -f ~/.scripts/tmux/status_elements.py ]; then ~/.scripts/tmux/status_elements.py uptime; fi) #[fg=#565f89]│ #(if [ -f ~/.scripts/tmux/status_elements.py ]; then ~/.scripts/tmux/status_elements.py network; fi) #[fg=#565f89]│ #(if [ -f ~/.scripts/tmux/status_elements.py ]; then ~/.scripts/tmux/status_elements.py battery; fi) #[fg=#565f89]│ #(if [ -f ~/.scripts/tmux/status_elements.py ]; then ~/.scripts/tmux/status_elements.py disk_usage; fi) #[fg=#565f89]│ #(if [ -f ~/.scripts/tmux/status_elements.py ]; then ~/.scripts/tmux/status_elements.py cpu_mem; fi) #[fg=#565f89]│ #(gitmux -cfg ~/.gitmux.conf "#{pane_current_path}") #[fg=#565f89]│ #[fg=#7aa2f7]#I:#P #[fg=#565f89]│ #[fg=#9ece6a]%Y-%m-%d #[fg=#565f89]│ #[fg=#7aa2f7]%H:%M:%S '
 
 # ==============================================================================
 # APPEARANCE - WINDOWS
 # ==============================================================================
 
-set -g window-status-format '#[fg=#565f89] #I:#W#{?window_zoomed_flag,*Z,}#{?window_activity_flag,!,} '
-set -g window-status-current-format '#[fg=#1a1b26,bg=#7aa2f7,bold] #I:#W#{?window_zoomed_flag,*Z,} '
+# Window status format with pane count and better indicators
+# Format: [index]:[name][pane_count][flags]
+set -g window-status-format '#[fg=#565f89]│ #[fg=#a9b1d6]#I:#W#[fg=#7dcfff]#{?#{>:#{window_panes},1},(#{window_panes}),}#[fg=#e0af68]#{?window_zoomed_flag,Z,}#[fg=#f7768e]#{?window_activity_flag,!,}#[fg=#bb9af7]#{?window_bell_flag,B,}#[fg=#565f89] '
+
+# Current window format (highlighted)
+set -g window-status-current-format '#[fg=#565f89]│ #[fg=#1a1b26,bg=#7aa2f7,bold] #I:#W#[fg=#1a1b26,bg=#7dcfff]#{?#{>:#{window_panes},1},(#{window_panes}),}#[fg=#1a1b26,bg=#e0af68]#{?window_zoomed_flag,Z,}#[fg=#565f89] '
+
+# Window status separator (using box-drawing characters)
 set -g window-status-separator ''
-set -g window-status-activity-style 'fg=#f7768e'
+
+# Activity and bell styles
+set -g window-status-activity-style 'fg=#f7768e bg=#1a1b26 bold'
+set -g window-status-bell-style 'fg=#bb9af7 bg=#1a1b26 bold'
 
 # ==============================================================================
 # APPEARANCE - PANES
